# today-house-price

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: architecture.mdc  framework.mdc  next.js-framework.mdc  readme-and-github.mdc  tech-stack.mdc  workflow.mdc
scripts/: fetch_seoul_house_prices.py  predict_house_price.py  prepare_house_price_dataset.py  run_web.py  train_house_price_model.py
scripts/REPORT_OUTPUT/: performance_summary.json
scripts/data/: predictions.csv  predictions_errors.csv
scripts/data/models/: price_linear_regression.joblib
src/today_house_price/: __init__.py
src/today_house_price/application/housing/: summary_builder.py
src/today_house_price/domain/housing/: __init__.py  dataset.py  evaluation.py  features.py  years.py  (+5 more)
src/today_house_price/infrastructure/: container.py
tests/application/: test_fetch_and_export.py  test_predict_price.py  test_prepare_dataset.py  test_summary_builder.py  test_train_price_model.py
tests/domain/: test_dataset.py  test_evaluation.py  test_features.py  test_metrics.py  test_pagination.py  test_years.py
tests/fixtures/: sample_transactions.csv
tests/infrastructure/: test_container.py  test_csv_reader.py  test_csv_writer.py  test_env.py  test_model_performance_report.py  test_predict_prompt.py  test_prediction_error_logger.py  test_seoul_open_data.py  test_seoul_open_data_client.py  test_seoul_open_data_parallel.py  test_sklearn_predictor.py  test_sklearn_trainer.py  test_summary_printer.py
tests/presentation/: test_web_app.py
(+28 files in other folders)
