[project]
name = "today-house-price"
version = "0.1.0"
description = "서울 부동산 실거래가 데이터 수집·분석"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "requests>=2.31.0",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["src/today_house_price"]
omit = ["tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/today_house_price"]
